# staged-recipes

./: ._appveyor.yml  .appveyor.yml  .appveyor.yml.notused  .appveyor.yml.orig  .env  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .save  .travis.yml  256  =1.3  COMMIT_EDITMSG  COPYING.txt  LICENSE  LICENSE-2.0.txt  LICENSE.FastK  LICENSE.txt  LINTING_FIXES.md  MIT_LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md  README_GRASS.md  Testing.ipynb  _build_vale_packages.sh  answer.rtd  appveyor.yml  azure-pipelines.yaml  azure-pipelines.yml  bash_util.sh  bld.bat  build-locally.py  build.sh  build_expect.exp  build_succes_packages.txt  call_appveyor.py  circle.yml  conda-forge.yaml  conda-forge.yml  (+25 more)
.CI/: build_all  create_feedstocks  create_feedstocks.py  travis_fast_finish.py  trigger_conda-forge.github.io.py  trigger_travis_build.py  trigger_travis_conda-forge.github.io.py  update_all_hooks.py  update_all_tokens  update_all_tokens.py  update_token.py
.azure-pipelines/: azure-pipelines-feedstock-creation.yml  azure-pipelines-linux-cos7.yml  azure-pipelines-linux-cuda.yml  azure-pipelines-linux.yml  azure-pipelines-osx.yml  (+3 more)
datapungi_fed/: .gitignore  .travis.yml  LICENSE  README.md  api.py  drivers.py  meta.yaml  pungiConfig.yaml  pyproject.toml  requirements.txt  utils.py
datapungi_fed/datapungi_fed/: __init__.py  driverCore.py  generalSettings.py
datapungi_fed/datapungi_fed/config/: datasetlist.yaml  pkgConfig.yaml  userSettings.json
datapungi_fed/datapungi_fed/tests/: __init__.py  conftest.py  main.py  test_drivers.py  test_driversCI.py
(+58961 files in other folders)
